# adventOfCode

./: .gitignore  LICENSE  README.md  day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
2020/day1/: Program.cs  day1.sln
2020/day11/: Program.cs  day11.sln
2020/day12/: Program.cs  day12.sln
2020/day13/: Program.cs  day13.sln
2020/day15/: ElfGame.cs  day15.sln
2020/day16/: day16.sln
2020/day17/: Program.cs  cubes.cs
2020/day18/: Class1.cs  Program.cs  day18.sln
2020/day19/: Program.cs
2020/day2/: day2.sln
2020/day2/day2/: passwordCheck.cs
2020/day3/: day3.sln
2020/day4/: Program.cs
2020/day5/: Program.cs  day5.sln
2020/day6/: Program.cs  day6.sln
2020/day7/: day7.sln
2020/day8/: Program.cs
2021/day1/: SonarSweep.ipynb
2021/day10/: SyntaxError.ipynb
2021/day12/: caveCharting.ipynb
2021/day13/: Origami.ipynb
2021/day16/: BITS.ipynb
2021/day25/: parkSubmarine.ipynb
2021/day5/: plottingACourse2_avoidingTheVents.ipynb
2021/day8/: FixingTheInstruments.ipynb
day1/: CMakeLists.txt  day1.cpp  day1.h
day10/: CMakeLists.txt  Program.cs  day10.cpp  day10.h  day10.sln
day11/: CMakeLists.txt  PlottingACourse4_OctopusCave.ipynb  day11.cpp  day11.h
day12/: CMakeLists.txt  day12.cpp  day12.h
day13/: CMakeLists.txt  day13.cpp  day13.h
day14/: CMakeLists.txt  Program.cs  day14.cpp  day14.h  day14.sln  polymerConstruction.ipynb
day15/: CMakeLists.txt  Program.cs  Untitled.ipynb  day15.cpp  day15.h  plottingACourse5_ChitonCave.ipynb
day16/: CMakeLists.txt  Program.cs  day16.cpp  day16.h  puzzleTest.txt
day17/: Ballistics.ipynb  CMakeLists.txt  board.cpp  board.h  day17.cpp  day17.h  day17.sln  tile.cpp  tile.h
day18/: CMakeLists.txt  day18.cpp  day18.h  snailMath.ipynb
day19/: CMakeLists.txt  day19.cpp  day19.h  day19.sln
day2/: CMakeLists.txt  day2.cpp  day2.h
day2/.ipynb_checkpoints/: plottingACourse-checkpoint.ipynb
day2/day2/: Program.cs
day20/: CMakeLists.txt  day20.cpp  day20.h  oceanMapping.ipynb
day21/: CMakeLists.txt  day21.cpp  day21.h  diceGame.ipynb
day22/: CMakeLists.txt  day22.cpp  day22.h  reactorReboot.ipynb
day23/: CMakeLists.txt  day23.cpp  day23.h
day24/: CMakeLists.txt  day24.cpp  day24.h
day25/: CMakeLists.txt  day25.cpp  day25.h
day3/: BoatDiagnostics.ipynb  CMakeLists.txt  Program.cs  day3.cpp  day3.h
day4/: CMakeLists.txt  SquidBingo.ipynb  day4.cpp  day4.h  day4.sln
day5/: BoardingPass.cs  CMakeLists.txt  day5.cpp  day5.h
day6/: CMakeLists.txt  day6.cpp  day6.h  watchingTheFishes.ipynb
day7/: BagRule.cs  CMakeLists.txt  CrabsToTheRescue.ipynb  Program.cs  day7.cpp  day7.h  fileTree.cpp
day8/: CMakeLists.txt  day8.cpp  day8.h  day8.sln
day9/: CMakeLists.txt  PlottingACourse3_CaveMapping.ipynb  Program.cs  bridge.cpp  day9.cpp  day9.h  day9.sln  grid_10PointRope.txt  grid_2PointRope.txt
